test/expected/explain_frri_v-c++03.out
explain void f(int &&r)
                   ^
20: error: rvalue reference is not supported until C++11
